kustomize/instances/overlays/frontend/hipstershop/productcatalog-canary/productcatalog-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productcatalogservice-canary
spec:
  host: productcatalogservice.hipstershop.svc.cluster.local
  subsets: 
  - name: v1
    labels:
      version: "v0.2.3"
  - name: v2
    labels:
      version: "v0.2.4"
