kustomize/instances/overlays/frontend/hipstershop/productcatalog-canary/productcatalog-vs-delay.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: 
  name: productcatalog-canary-vs
spec: 
  hosts: 
    - productcatalogservice
  http: 
    - 
      fault: 
        delay: 
          percent: 0
          fixedDelay: 10s
      route: 
        - 
          destination: 
            host: productcatalogservice
            subset: v1
          weight: 100
    - 
      route: 
        - 
          destination: 
            host: productcatalogservice
            subset: v2
          weight: 0
